added practical_openscap_vulnerability_scanning module

--- a/config/modules.yml
+++ b/config/modules.yml
@@ -107,3 +107,5 @@ practical_openscap_scanning:
   name: Practical OpenSCAP - Scanning and Reporting
 practical_openscap_remediation:
   name: Practical OpenSCAP - Remediation
+practical_openscap_vulnerability_scanning:
+  name: Practical OpenSCAP - Vulnerability Scanning
